fix: blur z-index

--- a/style.css
+++ b/style.css
@@ -733,7 +733,7 @@ section{
         position: fixed;
         top: 0;
         left: 0;
-        height: 70px;
+        height: 71px;
         width: 100%;
         background-color: #2d303a;
         z-index: 400;
